    o 26.09.2003: Version 2.1
    o 27.06.2003: Version 2.0
    o 07.03.2003: Version 1.1
    o 06.12.2002: Version 1.0

_____________________________________________________________________________


_____________________________________________________________________________

 Changes from 4.6 to 4.6.1
_____________________________________________________________________________

BEAM-1026 Mac/*nix commands/scripts fail because wrong line format (LR+CR)
BEAM-1025 Installer does not run after Java update on Mac Os X
BEAM-1024 VISAT does not launch after Java update on Mac Os X
BEAM-1023 Can not overlay compatible products
BEAM-1021 File chooser boxes shall support "component documents"
BEAM-1020 Exception during GUI initialization of Mosaic processor
BEAM-1019 Blue Marble Layer can not be restored from saved session
BEAM-1018 Value range of ROI does not consider no-data value
BEAM-1017 Wrong constant SECONDS_PER_DAY
BEAM-1016 Add "Zoom to Layer"-Button to Layer Manager
BEAM-1015 ProductUtils.copyTiePointGrids does not copy description text
BEAM-1014 ROI not considered when using value range
BEAM-1010 Show cursor position in other views
BEAM-1007 Geo-location / Tie Point Grid consistency
BEAM-1005 Incorrect scatter plot axes
BEAM-1004 X and Y variables always zero in band arithmetic
BEAM-1002 Editing bitmask overlays is not possible using the nimbus or gtk look & feel
BEAM-1001 SelectedProduct can be null in BandArithmetic
BEAM-1000 Spelling error in band arithmetic
BEAM-991  Yaxis of scatterplot does not show the right values
BEAM-456  ROI includes also no-data pixels if "Include pixel by conditions" is selected.


_____________________________________________________________________________

 Changes from 4.5 to 4.6
_____________________________________________________________________________

1) New VISAT Features

o A couple of new layers have been added to VISAT. Layers are used to enhance 