@@ -12,6 +12,7 @@
     <changelog>
         <![CDATA[
         <p>Changes in 4.6.1:<br/>
+          [BEAM-1028] Navigation window not fully functional on Unix/GTK+<br/>
           [BEAM-1025] Installer does not run after Java update on Mac Os X<br/>
           [BEAM-1024] VISAT does not launch after Java update on Mac Os X<br/>
           [BEAM-1023] Can not overlay compatible products<br/>
